--- a/2FACE/manifest.json
+++ b/2FACE/manifest.json
@@ -4,7 +4,17 @@
   "version": "1.1",
   "description": "A secure 2FA Chrome Extension with PIN protection",
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "permissions": [
     "storage",
