--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
   },
   "rules": {
     "no-unused-vars": "warn",
-    "no-console": ["warn", { "allow": ["error", "warn"] }],
+    "no-console": "off",
     "prefer-const": "warn",
     "no-var": "error",
     "eqeqeq": ["error", "always"],
