--- a/2FACE/manifest.json
+++ b/2FACE/manifest.json
@@ -16,11 +16,7 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": [
-    "storage",
-    "clipboardWrite",
-    "clipboardRead"
-  ],
+  "permissions": ["storage", "clipboardWrite", "clipboardRead"],
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   }
